# notes

./: README.md  tags.csv  template.xml
personal/therapy/exposure/: leetcode.xml
personal/therapy/exposure/SUDS/: OCDTrackingLog_1713304937.csv  SUDS.txt  menu.csv  triggers.csv
personal/therapy/networking/coworkers/: m2.txt  m2.xml
personal/therapy/networking/friends/: cait_matt.txt  cait_matt.xml  david_cassandra.txt  david_cassandra.xml  nana_nanu.txt  travis.txt  travis.xml
personal/therapy/reading/: brainlock.txt  brainlock.xml  clipboard0-0.txt  iocdf.txt  iocdf.xml
personal/therapy/reading/TaoTeChing/: tao.tex  tao.xml
personal/therapy/reading/biochemistry/: biochemistry.txt
personal/therapy/reading/brainlock/: brainlock.txt  brainlock.vim  brainlock.xml
personal/therapy/reading/iocdf/: iocdf.txt  perfectionism.txt
personal/therapy/sessions/: exposure.txt
personal/therapy/sessions/04_22_2024/: SUDS  talkingPoints.txt
personal/therapy/sessions/04_25_2024/: talkingPoints.txt
personal/therapy/sessions/04_30_2024/: talkingPoints.txt
personal/therapy/sessions/05_02_2024/: penance.xml  talkingPoints.txt
personal/therapy/sessions/05_09_2024/: talkingPoints.txt
personal/therapy/sessions/05_13_2024/: parents.txt  siblings.txt
personal/therapy/sessions/05_16_2024/: talkingPoints.txt
personal/therapy/sessions/05_20_2024/: talkingPoints.txt
personal/therapy/sessions/05_27_2024/: buddhism.txt  (+1 more)
work/development/cpp/conan/test/source/: CMakeLists.txt  a.txt  b.txt  conanfile.txt  main  main.cpp
work/interviewPrep/geometry/: linesOfSymmetry.txt
(+32 files in other folders)
